Fix styling on mobile

--- a/webapp/src/sass/index.scss
+++ b/webapp/src/sass/index.scss
@@ -3,7 +3,6 @@ header {
     width: 100%;
     height: 8rem;
     padding-left: 2.5rem;
-    padding-top: 2rem;
     position: fixed;
 
     background: rgba(20, 20, 20, 0.6);
@@ -15,13 +14,15 @@ header {
     letter-spacing: 0.125rem;
 
     display: flex;
-    align-items: baseline;
+    align-items: center;
 
     .header-info {
         display: none;
     }
 
     @media (min-width: 30em) {
+        padding-top: 2rem;
+        align-items: baseline;
         font-size: 3rem;
         .header-info {
             display: inline;
